added default cucumber step definitions